# at-wavespace-unity-sdk

./: LICENSE  README.md
Sofa_Conv/: convert_normalize_sofa.py
Unity_WaveSpace/: Assembly-CSharp-Editor.csproj  Assembly-CSharp.csproj  At_WaveSpace.Editor.csproj  At_WaveSpace.csproj  NewAssembly.csproj  Unity_WaveSpace.sln  WaveSpace.csproj
Unity_WaveSpace/Assets/At_WaveSpace/Plugins/MacOSX/: at_wavespace_engine.dylib
Unity_WaveSpace/Assets/At_WaveSpace/Resources/At_WaveSpace/WavefrontsVisualisation/: SoundWaveShader.compute  SoundwaveRenderTextureMaterial.mat  SoundwaveUnlit.shader  WavefrontDisplay.prefab
Unity_WaveSpace/Assets/At_WaveSpace/Scenes/: WaveSpace_Starter.unity
Unity_WaveSpace/Assets/At_WaveSpace/Scripts/: WaveSpace.asmdef
Unity_WaveSpace/Assets/At_WaveSpace/Scripts/Editor/: At_MasterOutputEditor.cs  At_MixerWindow.cs  At_PlayerEditor.cs  At_SceneStateCleaner.cs  At_WaveSpacePostInstall.cs  At_WaveSpaceSettingsWindow.cs  WaveSpace.asmdef  WaveSpaceInstaller.cs
Unity_WaveSpace/Assets/At_WaveSpace/Scripts/Engine/: At_Listener.cs  At_MasterOutput.cs  At_Player.cs  At_VirtualSpeaker.cs  At_WavefrontEmissiveTint.cs  SoundWaveShaderManager.cs
Unity_WaveSpace/Assets/At_WaveSpace/Scripts/States/: At_3DAudioEngineState.cs  At_AudioEngineUtils.cs  At_OutputState.cs  At_PlayerState.cs  At_SpatialConfigState.cs  At_SpeakerConfig.cs
Unity_WaveSpace/Assets/Scenes/: WaveSpace_Starter.unity
Unity_WaveSpace/Assets/StreamingAssets/: WaveSpace_Starter_States.state
Unity_WaveSpace/Assets/StreamingAssets/SpatConfig/: example.spatconfig.json
Unity_WaveSpace/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset
Unity_WaveSpace/UserSettings/Layouts/: default-2022.dwlt
Unity_WaveSpace/_at_wavespace_engine/: CMakeLists.txt  CMakePresets.json  _at_wavespace_consoleApp.jucer  _at_wavespace_engine.jucer  _at_wavespace_engine_mac.jucer  _at_wavespace_engine_win.jucer
Unity_WaveSpace/_at_wavespace_engine/JuceLibraryCode/: JuceHeader.h
Unity_WaveSpace/_at_wavespace_engine/Source/: AT_AudioManager.cpp  AT_AudioManager.h  AT_AudioManagerListener.h  AT_BinauralSimpleSpatializer.cpp  AT_BinauralSimpleSpatializer.h  AT_NearFieldCorrection.h  AT_SpatConfig.h  AT_SpatPlayer.cpp  AT_SpatPlayer.h  AT_SpatializationEngine.cpp  AT_SpatializationEngine.h  AT_Spatializer.cpp  AT_Spatializer.h  AT_WfsPrefilter.h  HRTFProcessor.cpp  HRTFProcessor.h  HRTFTable.cpp  HRTFTable.h  Main.cpp  PluginInterface.cpp  PluginInterface.h  SOFAReader.cpp  SOFAReader.h  UnityLogger.cpp  UnityLogger.h
